fixed sidenav and vertical-fill-layout on ie11

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@ body {
   font-size: 14px;
 }
 
+.ant-layout .ant-layout-sider {
+  min-height: 100vh;
+}
+
 /* section.ant-layout-has-sider {
   height: 100vh;
 } */
